# Ember

./: .gitignore  Cargo.toml  README.md
agent/: Cargo.toml
agent/src/: client.rs  docker.rs  enroll.rs  executor.rs  main.rs  state.rs  volumes.rs
control-plane/: Cargo.toml
control-plane/migrations/: 0001_init.sql  0002_sessions.sql  0003_users.sql  0004_tenants.sql  0005_audit_logs.sql  0006_cloud_control_plane_foundation.sql
control-plane/src/: agent_ws.rs  audit.rs  auth.rs  config.rs  db.rs  error.rs  log_buffer.rs  main.rs  reconciler.rs  scheduler.rs  state.rs
control-plane/src/api/: access.rs  agent.rs  audit.rs  auth.rs  events.rs  health.rs  hosts.rs  logs.rs  mod.rs  volumes.rs  workloads.rs
docs/: dev-setup.md  public-cloud-control-plane-plan.md
scripts/: dev.sh
shared/: Cargo.toml
shared/src/: ids.rs  protocol.rs
web/: .gitignore  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  page.tsx
web/app/(console)/: layout.tsx  page.tsx
web/app/(console)/access/: page.tsx
web/app/(console)/audit/: page.tsx
web/app/(console)/control-plane/: page.tsx
web/app/(console)/hosts/: page.tsx
web/app/(console)/logs/control-plane/: page.tsx
web/app/(console)/volumes/: page.tsx
web/app/(console)/volumes/new/: page.tsx
web/app/(console)/workloads/: page.tsx
web/app/(console)/workloads/[id]/: page.tsx
web/app/(console)/workloads/new/: page.tsx
web/app/access/: page.tsx
web/app/hosts/: page.tsx
web/app/login/: LoginClient.tsx  page.tsx
web/app/volumes/: page.tsx
web/app/volumes/new/: page.tsx
web/app/workloads/: page.tsx
web/app/workloads/new/: page.tsx
web/components/: ControlPlaneUI.tsx  Shell.tsx  ShellClient.tsx
web/lib/: api.ts  server-api.ts
web/public/: install.sh
