[package]
name = "ember-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ember-agent"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
ember-shared.workspace = true
