[package]
name = "ember-control-plane"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ember-control-plane"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
ember-shared.workspace = true
